# PanCakesORM

./: .env  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
pancakes/: __init__.py
pancakes/abstract/: __init__.py  abstract_box.py  query_box.py  querybox.py
pancakes/cook/: __init__.py  clean.py  flavor.py  furnace.py  ingredient.py  layer.py  mold.py
pancakes/datatype/: __init__.py  sql_datatype.py
pancakes/models/: __init__.py  model.py
pancakes/orm/: __init__.py  consulta.py  delete.py  insert.py  query.py  update.py
pancakes/query_validator/: __init__.py  query_validator.py
pancakes/sql/: __init__.py  datatype.py
pancakes/tool/: __init__.py  box.py  filter_validator.py  function.py  idu.py
pancakes/tools/: __init__.py  functions.py
pancakes/valid/: __init__.py  filter_validator.py  query_validator.py  validate_query.py
tests/: conftest.py  container_example.json  metadata_example.json  schema_example.json  test_class_abstract_box.py  test_class_box.py  test_class_coffee_shop.py  test_class_datatypes.py  test_class_on_real_schema.py  test_class_pancakes_orm.py  test_class_pydantic.py  test_class_query_box.py  test_class_query_box_renewed.py  test_class_querybox_renewed.py  test_computed_fields.py  test_env.py  test_function_delete.py  test_function_insert.py  test_function_pancakes.py  test_function_query.py  test_function_update.py  test_router.py  test_select_link_bug.py
