[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pancakes-orm"
version = "4.0.0"
description = "ORM sqlite3 based. Listo para integrar con frontend."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Andres Alberto Lopez Mendoza", email="andres.lopez.full.dev@gmail.com" },
]
license = { text = "Apache-2.0" }
dependencies = ["python-dotenv", "fastapi[standard]", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pancakes*"]
exclude = ["tests*", "assets*"]
